# PrisonersDilemma

./: CMakeLists.txt  matrix
include/: PluginLoader.hpp
include/Simulator/: GameMatrix.hpp  InputData.hpp  MatrixLoader.hpp  OutputData.hpp  PrisonerSimulator.hpp  input_data.hpp  prisoner_simulator.hpp
include/Strategies/: IStrategy.hpp  Kind.hpp  Strategy.hpp  StrategyFactory.hpp  Traitor.hpp
src/: CMakeLists.txt  main.cpp
src/Simulator/: InputData.cpp  MatrixLoader.cpp  OutputData.cpp  PrisonerSimulator.cpp
src/Strategies/: Kind.cpp  Strategy.cpp  StrategyFactory.cpp  Traitor.cpp
